test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/multiple_static_local.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[68]:
  int
  identifier(foo)
  (
  void
  )
  {
  static
  int
  identifier(a)
  =
  const int(3)
  ;
  identifier(a)
  =
  identifier(a)
  *
  const int(2)
  ;
  return
  identifier(a)
  ;
  }
  int
  identifier(bar)
  (
  void
  )
  {
  static
  int
  identifier(a)
  =
  const int(4)
  ;
  identifier(a)
  =
  identifier(a)
  +
  const int(1)
  ;
  return
  identifier(a)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  )
  +
  identifier(bar)
  (
  )
  +
  identifier(foo)
  (
  )
  +
  identifier(bar)
  (
  )
  ;
  }
