test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/non_constant_static_local_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(1)
  ;
  static
  int
  identifier(b)
  =
  identifier(a)
  *
  const int(2)
  ;
  return
  identifier(b)
  ;
  }
